--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,11 @@
 ios/Debug-iphoneos
 
 ios/Release-iphoneos
+
+ios/cwf/cwf.xcodeproj/project.xcworkspace/xcuserdata
+
+ios/cwf/cwf.xcodeproj/xcuserdata
+
+ios/cwf-test/cwf-test.xcodeproj/project.xcworkspace/xcuserdata
+
+ios/cwf-test/cwf-test.xcodeproj/xcuserdata
