--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,57 @@ ios/cwf/cwf.xcodeproj/xcuserdata
 ios/cwf-test/cwf-test.xcodeproj/project.xcworkspace/xcuserdata
 
 ios/cwf-test/cwf-test.xcodeproj/xcuserdata
+
+autom4te.cache
+config.h.in
+config.sub
+ltmain.sh
+stamp-h1
+COPYING
+Makefile
+README
+compile
+config.h.in~
+configure
+install-sh
+m4
+aclocal.m4
+config.guess
+config.log
+autogen.sh
+
+
+*.lo
+
+*.o
+
+.deps
+
+.libs
+
+.dirstamp
+
+*.la
+
+*.in
+
+*.gcda
+*.gcno
+
+missing
+
+libtool
+
+depcomp
+
+config.status
+
+config.h
+
+build
+
+test/testcwf
+
+reports
+
+INSTALL
