--- a/.cproject
+++ b/.cproject
@@ -29,7 +29,7 @@
 								<option id="macosx.c.link.option.paths.1947687054" name="Library search path (-L)" superClass="macosx.c.link.option.paths" valueType="libPaths">
 									<listOptionValue builtIn="false" value="/usr/local/lib"/>
 								</option>
-								<option id="macosx.c.link.option.ldflags.1685075476" name="Linker flags" superClass="macosx.c.link.option.ldflags" value="-fprofile-arcs -ftest-coverage" valueType="string"/>
+								<option id="macosx.c.link.option.ldflags.1685075476" name="Linker flags" superClass="macosx.c.link.option.ldflags" value="" valueType="string"/>
 								<inputType id="cdt.managedbuild.tool.macosx.c.linker.input.603555197" superClass="cdt.managedbuild.tool.macosx.c.linker.input">
 									<additionalInput kind="additionalinputdependency" paths="$(USER_OBJS)"/>
 									<additionalInput kind="additionalinput" paths="$(LIBS)"/>
@@ -47,7 +47,7 @@
 							<tool id="cdt.managedbuild.tool.gnu.c.compiler.macosx.exe.debug.573176837" name="GCC C Compiler" superClass="cdt.managedbuild.tool.gnu.c.compiler.macosx.exe.debug">
 								<option defaultValue="gnu.c.optimization.level.none" id="gnu.c.compiler.macosx.exe.debug.option.optimization.level.1883065887" name="Optimization Level" superClass="gnu.c.compiler.macosx.exe.debug.option.optimization.level" valueType="enumerated"/>
 								<option id="gnu.c.compiler.macosx.exe.debug.option.debugging.level.1114072543" name="Debug Level" superClass="gnu.c.compiler.macosx.exe.debug.option.debugging.level" value="gnu.c.debugging.level.max" valueType="enumerated"/>
-								<option id="gnu.c.compiler.option.optimization.flags.208397054" name="Other optimization flags" superClass="gnu.c.compiler.option.optimization.flags" value="-fprofile-arcs -ftest-coverage" valueType="string"/>
+								<option id="gnu.c.compiler.option.optimization.flags.208397054" name="Other optimization flags" superClass="gnu.c.compiler.option.optimization.flags" value="" valueType="string"/>
 								<inputType id="cdt.managedbuild.tool.gnu.c.compiler.input.1773579115" superClass="cdt.managedbuild.tool.gnu.c.compiler.input"/>
 							</tool>
 						</toolChain>
